# Personal-Projects

Bg-Removal/backend/: main.py
Bg-Removal/frontend/: package-lock.json  package.json
Bg-Removal/frontend/src/app/: globals.css  layout.tsx  page.tsx
Kaladi-Converter/: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
Kaladi-Converter/converters/: .env  archive_converter.py  audio_converter.py  base_converter.py  code_converter.py  document_converter.py  image_converter.py  spreadsheet_converter.py  video_converter.py
Kaladi-Converter/pages/: Archive_Converter.py  Audio_Converter.py  Background_Remover.py  Code_Converter.py  Document_Converter.py  Image_Converter.py  Spreadsheet_Converter.py  Video_Converter.py
Python-Quiz-App/: package-lock.json  package.json
Python-Quiz-App/for-youtube/: next.config.ts  package-lock.json  package.json
Python-Quiz-App/for-youtube/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
Python-Quiz-App/for-youtube/app/about/: page.tsx
Python-Quiz-App/for-youtube/app/community/: CategoryFilter.tsx  CommunityPost.tsx  CreatePostButton.tsx  page.tsx
Python-Quiz-App/for-youtube/app/components/: Footer.tsx  Navbar.tsx  QuizCard.tsx  aaQuizCard.tsx
Python-Quiz-App/for-youtube/app/courses/: CourseCard.tsx  page.tsx
Python-Quiz-App/for-youtube/app/day/: page.tsx
Python-Quiz-App/for-youtube/app/day1/: page.tsx
Python-Quiz-App/for-youtube/app/day2/: page.tsx
Python-Quiz-App/for-youtube/app/leaderboard/: page.tsx
Python-Quiz-App/for-youtube/lib/: sanity.ts
Python-Quiz-App/for-youtube/sanity/: env.ts
(+43 files in other folders)
